// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchanger should render correctly in "debug" mode 1`] = `
<div
  className="Exchanger"
>
  <div
    className="Exchanger_top-section"
  >
    <pure(CurrencyInputRaw)
      actions={
        Object {
          "changeAmount": undefined,
          "changeCurrency": undefined,
        }
      }
      className="Exchanger_input"
    />
    <div
      className="Exchanger_field"
    >
      <span
        className="Exchanger_label"
      >
        You have
      </span>
      <pure(BalanceRaw) />
    </div>
  </div>
  <div
    className="Exchanger_bottom-section"
  >
    <div
      className="Exchanger_rate"
    >
      <pure(RateRaw) />
    </div>
    <pure(CurrencyInputRaw)
      actions={
        Object {
          "changeAmount": undefined,
          "changeCurrency": undefined,
        }
      }
    />
    <div
      className="Exchanger_field"
    >
      <span
        className="Exchanger_label"
      >
        You have
      </span>
      <pure(BalanceRaw) />
    </div>
    <div
      className="Exchanger_submit"
    >
      <pure(WithStyles(ExchangeFabRaw))
        aria-label="Exchange"
        disabled={true}
        variant="extended"
      >
        Exchange
      </pure(WithStyles(ExchangeFabRaw))>
    </div>
  </div>
</div>
`;

exports[`Exchanger should render correctly with no props 1`] = `
<div
  className="Exchanger"
>
  <div
    className="Exchanger_top-section"
  >
    <pure(CurrencyInputRaw)
      actions={
        Object {
          "changeAmount": undefined,
          "changeCurrency": undefined,
        }
      }
      className="Exchanger_input"
    />
    <div
      className="Exchanger_field"
    >
      <span
        className="Exchanger_label"
      >
        You have
      </span>
      <pure(BalanceRaw) />
    </div>
  </div>
  <div
    className="Exchanger_bottom-section"
  >
    <div
      className="Exchanger_rate"
    >
      <pure(RateRaw) />
    </div>
    <pure(CurrencyInputRaw)
      actions={
        Object {
          "changeAmount": undefined,
          "changeCurrency": undefined,
        }
      }
    />
    <div
      className="Exchanger_field"
    >
      <span
        className="Exchanger_label"
      >
        You have
      </span>
      <pure(BalanceRaw) />
    </div>
    <div
      className="Exchanger_submit"
    >
      <pure(WithStyles(ExchangeFabRaw))
        aria-label="Exchange"
        disabled={true}
        variant="extended"
      >
        Exchange
      </pure(WithStyles(ExchangeFabRaw))>
    </div>
  </div>
</div>
`;

exports[`Exchanger should render form with given props 1`] = `
<div
  className="Exchanger"
>
  <div
    className="Exchanger_top-section"
  >
    <pure(CurrencyInputRaw)
      actions={
        Object {
          "changeAmount": undefined,
          "changeCurrency": undefined,
        }
      }
      amount="10"
      className="Exchanger_input"
      currency={
        Object {
          "currency": "USD",
          "symbol": "$",
        }
      }
      currencyOptions={
        Array [
          Object {
            "currency": "USD",
            "symbol": "$",
          },
          Object {
            "currency": "EUR",
            "symbol": "€",
          },
          Object {
            "currency": "GBP",
            "symbol": "£",
          },
        ]
      }
    />
    <div
      className="Exchanger_field"
    >
      <span
        className="Exchanger_label"
      >
        You have
      </span>
      <pure(BalanceRaw)
        amount={20}
        currency={
          Object {
            "currency": "USD",
            "symbol": "$",
          }
        }
      />
    </div>
  </div>
  <div
    className="Exchanger_bottom-section"
  >
    <div
      className="Exchanger_rate"
    >
      <pure(RateRaw)
        inputCurrency={
          Object {
            "currency": "USD",
            "symbol": "$",
          }
        }
        outputCurrency={
          Object {
            "currency": "EUR",
            "symbol": "€",
          }
        }
        rate="0.6"
      />
    </div>
    <pure(CurrencyInputRaw)
      actions={
        Object {
          "changeAmount": undefined,
          "changeCurrency": undefined,
        }
      }
      amount="10"
      currency={
        Object {
          "currency": "EUR",
          "symbol": "€",
        }
      }
      currencyOptions={
        Array [
          Object {
            "currency": "USD",
            "symbol": "$",
          },
          Object {
            "currency": "EUR",
            "symbol": "€",
          },
          Object {
            "currency": "GBP",
            "symbol": "£",
          },
        ]
      }
    />
    <div
      className="Exchanger_field"
    >
      <span
        className="Exchanger_label"
      >
        You have
      </span>
      <pure(BalanceRaw)
        amount={30}
        currency={
          Object {
            "currency": "EUR",
            "symbol": "€",
          }
        }
      />
    </div>
    <div
      className="Exchanger_submit"
    >
      <pure(WithStyles(ExchangeFabRaw))
        aria-label="Exchange"
        disabled={false}
        variant="extended"
      >
        Exchange
      </pure(WithStyles(ExchangeFabRaw))>
    </div>
  </div>
</div>
`;
